Renames Date scalar DateTime and adds new Date scalar